--- a/src/pages/tools-tech/2022.md
+++ b/src/pages/tools-tech/2022.md
@@ -78,13 +78,13 @@ title: Tools & Tech to build apps in 2022
 5. GraphQL
 6. JWT / Auth0
 
-### Deployment tools
+### Deployment Tools
 
 1. PM2
 
 ---
 
-## Design tools
+## Design Tools
 
 1. Pen & Paper
 2. Figma
@@ -122,7 +122,7 @@ title: Tools & Tech to build apps in 2022
 
 ---
 
-## Enterprise tools
+## Enterprise Tools
 
 1. JIRA
 2. MS teams
