Made modification to resume download links

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -5,11 +5,19 @@ slug: portfolio
 ---
 
 
+
+
+
+
+
+
+
+
 import ResumeDownloadLinks from "../src/components/common/DownloadLinks";
 
 # Balaji Portfolio
 
-<ResumeDownloadLinks />
+<ResumeDownloadLinks isInLine={false} />
 
 ## List of projects
 
@@ -52,14 +60,19 @@ import ResumeDownloadLinks from "../src/components/common/DownloadLinks";
 </dl>
 
 <dl>
-  <dt>9. Company Internal Applications</dt>
-  <dd>10. Motorola Mobility - Permissions manager</dd>
+  <dt>Company Internal Applications</dt>
+  <dd>9. Motorola Mobility - Permissions manager</dd>
 </dl>
 
 <dl>
   <dt>Personal Projects</dt>
-  <dd>11. Bookstoc - Unconventional books cataloging app</dd>
-  <dd>12. dhbalaji website - Blend of professional and personal touch</dd>
+  <dd>10. Bookstoc - Unconventional books cataloging app</dd>
+  <dd>11. dhbalaji website - Blend of professional and personal touch</dd>
 </dl>
 
-## Enterprise Applications
+<dl>
+  <dt>NGO Projects</dt>
+  <dd>12. Satpraje - Not for profit Organization for children from economically weaker backgrounds</dd>
+</dl>
+
+We are working on improving this section of the website and will have it back up and running soon, meanwhile <ResumeDownloadLinks />
