Changed image formats

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -55,7 +55,7 @@ import Image from '@theme/IdealImage';
 
     Shukran is a mobile app developed by Dubai's largest retail conglomerate, Landmark Group, to enhance customer experience and engagement. The web app provides users with a seamless shopping experience by allowing them to earn and redeem reward points across various Landmark Group brands, including Centrepoint, Home Centre, and Max Fashion. Shukran also offers personalized deals, exclusive discounts, and early access to sales, increasing customer loyalty and retention. The app features a user-friendly interface, easy payment options, and a comprehensive loyalty program that rewards users for their purchases and engagement. Shukran is available for download on both iOS and Android devices.
 
-    <Image  img={require('../static/img/portfolio/Shukran.png')} />
+    <Image  img={require('../static/img/portfolio/Shukran.webp')} />
 
     Tech stack - responsive websites, sketch, mac, SASS, BEM CSS, VueJS, Zeplin In-vision app.
 
@@ -87,7 +87,7 @@ import Image from '@theme/IdealImage';
 
     The Cisco Webex Sales Portal is a sophisticated and all-encompassing platform built to provide sales teams with comprehensive support for their Webex product and service sales efforts. The portal offers customers multiple options, including the ability to create free tier or trial accounts, as well as purchase premium plans directly from the website. Boasting a highly intuitive user interface and an array of powerful features, the Cisco Webex Sales Portal is a must-have resource for sales professionals seeking to accelerate growth and foster long-term customer relationships.
 
-    <Image  img={require('../static/img/portfolio/cisco-webex.png')} />
+    <Image  img={require('../static/img/portfolio/cisco-webex.webp')} />
 
     Tech stack - Java REST APIs, jQuery, Bootstrap, SCSS, jQuery components, JSP, etc. 
   
@@ -110,7 +110,7 @@ import Image from '@theme/IdealImage';
 
   Bookstoc is a hobby project which I built to catalog my books collection and to track the books I share with my friends. I was the full stack developer on the doing development and marketing for the website. Built on ExtJS and PHP, it had ran its time. Currently the `Next JS` version of bookstoc is `WIP`.
 
-  <Image  img={require('../static/img/portfolio/bookstoc.png')} />
+  <Image  img={require('../static/img/portfolio/bookstoc.webp')} />
 
   Tech stack - ExtJS, Php, linux hosting
 
@@ -120,7 +120,7 @@ import Image from '@theme/IdealImage';
 
   The personal website of a dhbalaji, serves as a platform for showcasing his portfolio, sharing certification notes, and blogging about his experiences. The website also emphasizes the importance of personal branding and reaching a wider audience to share knowledge and ideas. Through his website, I try to promote my skills and expertise, while also sharing valuable insights and knowledge with others in the industry. Overall, the website serves as a valuable resource for individuals interested in frontend engineering, as well as those looking to build their personal brand and expand their reach in the industry. The website is few years old and had already evolved from `hexo JS` to `docusarus`.
 
-  <Image  img={require('../static/img/portfolio/dhbalaji-website.png')} />
+  <Image  img={require('../static/img/portfolio/dhbalaji-website.webp')} />
 
   Tech stack - docusarus, vercel, css, nodeJS, google domains
 
@@ -132,7 +132,7 @@ import Image from '@theme/IdealImage';
   
   The not-for-profit organization is dedicated to improving the lives of children in the Karnataka area. The organization offers a range of services and programs designed to address the needs of children in the region, such as education, healthcare, and nutrition. It works closely with local communities and government agencies to provide support and resources to children and their families. 
 
-  <Image  img={require('../static/img/portfolio/satpraje.png')} />
+  <Image  img={require('../static/img/portfolio/satpraje.webp')} />
 
   Tech Stack: Wordpress
 
