fixed broken link

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -124,7 +124,7 @@ import Image from '@theme/IdealImage';
 
   Tech stack - docusarus, vercel, css, nodeJS, google domains
 
-  [dhbalaji.dev website](www.dhbalaji.dev)
+  [dhbalaji.dev website](https://dhbalaji.dev)
 
 ### Not For Profits
   
