--- a/src/pages/reading-goals/2024.md
+++ b/src/pages/reading-goals/2024.md
@@ -1,6 +1,6 @@
 # Reading Goals 2024
 
-> Navigating the Path to Principal Software Engineer
+> Primary focus on technical reads
 
 Here are my book picks to advance my skills and achieve career goals in the dynamic world of software engineering.
 
