--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -5,171 +5,200 @@ slug: portfolio
 ---
 
 import ResumeDownloadLinks from "../src/components/common/DownloadLinks";
-import Image from '@theme/IdealImage';
+import Image from "@theme/IdealImage";
 
 ## Technical Projects
 
+### Revenue Optimizer
+
+Description: Currently under development, details remain confidential and are not publicly available, akin to the Sabre website.
+
+Role Overview:
+
+1. Technical Leadership: Coding, Refactoring & Directing the greenfield development of a cutting-edge product with a dedicated team of 10 frontend engineers, including both full-time employees and contractors.
+
+2. Strategic Decision-Making: Oversaw the architectural direction, selection of npm packages, and performance optimization, ensuring exceptional lighthouse scores and thorough PR reviews.
+
+3. Team and Talent Management: Conducted technical interviews to curate a high-performing team and procured essential npm packages to enhance development capabilities.
+
+4. Automation and Collaboration: Implemented automated testing with Playwright, facilitated cross-functional collaborations, and provided strategic UX feedback to elevate user experience.
+
+Technological Stack:
+
+- Frontend Technologies: React 18, Zustand, Tanstack Query, AG Grid, Highcharts, Sabre Spark EDL
+
+- Backend Technologies: Google Cloud Platform (GCP), Spring Boot, MongoDB
+
+Duration: April 2024 - Present
+
 ### Enterprise Design Language
-  
-   1. Sabre Spark Enterprise Design Language
-  
-      By using Sabre Spark EDL, Sabre ensures a unified user experience across their products, enhancing user satisfaction and facilitating the adoption of new features and functionality. Spark EDL team consists of skilled designers and design technologists who specialize in developing vanilla JS components, React components, and design language CSS and themes. Their expertise and collaborative approach ensure that Sabre's products are designed with a consistent and intuitive user interface that meets the highest standards of accessibility, efficiency, and visual appeal.
 
-      <Image  img={require('../static/img/portfolio/spark-edl-screenshot.webp')} />
+1.  Sabre Spark Enterprise Design Language
 
-      Tech Stack - HTML, CSS, JS, Sass, ReactJS, Storybook, NPM, GCP, Teamcity CI, mac, linux VMs, NVM, NodeJS, Rollup JS, Husky, React Testing Library, Playwright, Bitbucket, JIRA
+    By using Sabre Spark EDL, Sabre ensures a unified user experience across their products, enhancing user satisfaction and facilitating the adoption of new features and functionality. Spark EDL team consists of skilled designers and design technologists who specialize in developing vanilla JS components, React components, and design language CSS and themes. Their expertise and collaborative approach ensure that Sabre's products are designed with a consistent and intuitive user interface that meets the highest standards of accessibility, efficiency, and visual appeal.
 
-      [Sabre Spark EDL Website](http://sabrespark.com/)
+    <Image img={require("../static/img/portfolio/spark-edl-screenshot.webp")} />
+
+    Tech Stack - HTML, CSS, JS, Sass, ReactJS, Storybook, NPM, GCP, Teamcity CI, mac, linux VMs, NVM, NodeJS, Rollup JS, Husky, React Testing Library, Playwright, Bitbucket, JIRA
+
+    [Sabre Spark EDL Website](http://sabrespark.com/)
 
 ### Travel Industry
-  
-  2. Sabre Sonic Inventory GUI 
-  
-    Sabre Sonic Inventory GUI is a graphical user interface & spring boot application that allows airlines to efficiently manage their flight schedules, seat inventory, and fare classes pricing. Sabre Sonic Inventory GUI also includes advanced features such as real-time inventory updates, dynamic pricing, and seat maps, which facilitate effective decision-making and improve customer satisfaction. The Sabre Sonic Inventory GUI team is composed of a diverse group of professionals, including business analysts, designers, full stack developers, architects, managers, directors, marketing specialists, and project managers.
 
-    <Image  img={require('../static/img/portfolio/ssi-gui-inv.webp')} />
+2. Sabre Sonic Inventory GUI
 
-    Tech stack - React JS, Redux, Redux form, Redux Observable, React Router, Spring boot, Java, XML, IntelliJ Idea, Git, Bitbucket, JIRA, Spark EDL, NPM, Webpack, Level Access, Invision App.
+   Sabre Sonic Inventory GUI is a graphical user interface & spring boot application that allows airlines to efficiently manage their flight schedules, seat inventory, and fare classes pricing. Sabre Sonic Inventory GUI also includes advanced features such as real-time inventory updates, dynamic pricing, and seat maps, which facilitate effective decision-making and improve customer satisfaction. The Sabre Sonic Inventory GUI team is composed of a diverse group of professionals, including business analysts, designers, full stack developers, architects, managers, directors, marketing specialists, and project managers.
+
+   <Image img={require("../static/img/portfolio/ssi-gui-inv.webp")} />
+
+   Tech stack - React JS, Redux, Redux form, Redux Observable, React Router, Spring boot, Java, XML, IntelliJ Idea, Git, Bitbucket, JIRA, Spark EDL, NPM, Webpack, Level Access, Invision App.
 
 ### Ecommerce
 
-  3. Landmark brands mdot webapps
+3. Landmark brands mdot webapps
 
-    To enhance the mobile ecommerce website conversions for Landmark Group brands, our frontend engineering team developed a standalone mdot web app using modern technologies such as ReactJS, PWA, and server-side rendering. The project was initiated from scratch, and the team faced various technical challenges to obtain approval from the directors and gain infrastructure assistance. While ensuring a great user experience and scaling the team, we met the project deadlines and successfully launched the app.
+   To enhance the mobile ecommerce website conversions for Landmark Group brands, our frontend engineering team developed a standalone mdot web app using modern technologies such as ReactJS, PWA, and server-side rendering. The project was initiated from scratch, and the team faced various technical challenges to obtain approval from the directors and gain infrastructure assistance. While ensuring a great user experience and scaling the team, we met the project deadlines and successfully launched the app.
 
-    <Image  img={require('../static/img/portfolio/mob-website.webp')} />
+   <Image img={require("../static/img/portfolio/mob-website.webp")} />
 
-    Tech stack - NodeJS, Express, ReactJS, Redux, React Router, Redux thunk, Algolia, REST Api, PWA, Service workers, Vue JS
+   Tech stack - NodeJS, Express, ReactJS, Redux, React Router, Redux thunk, Algolia, REST Api, PWA, Service workers, Vue JS
 
-  4. Landmark brands ecommerce webapps
+4. Landmark brands ecommerce webapps
 
-    Landmark Group is a conglomerate company that owns several retail brands such as Maxfashion, Lifestyle, Home Center, and more. Each brand has its own website, such as maxfashion.com, which provides customers with a wide range of clothing, footwear, and accessories options for all ages, from casual to formal wear. The website offers a user-friendly interface, enabling easy navigation and browsing of products by category, brand, or price, and provides frequent sales and discounts to customers. The website serves as a digital representation of the retailer's brand identity and provides customers with omnichannel services such as the option to purchase online and pick up in-store.
+   Landmark Group is a conglomerate company that owns several retail brands such as Maxfashion, Lifestyle, Home Center, and more. Each brand has its own website, such as maxfashion.com, which provides customers with a wide range of clothing, footwear, and accessories options for all ages, from casual to formal wear. The website offers a user-friendly interface, enabling easy navigation and browsing of products by category, brand, or price, and provides frequent sales and discounts to customers. The website serves as a digital representation of the retailer's brand identity and provides customers with omnichannel services such as the option to purchase online and pick up in-store.
 
-   <Image  img={require('../static/img/portfolio/max-fashion.webp')} />
+{" "}
 
-   Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS, Grunt JS, Google analytics, Google Tag Manager, Bitbucket, JIRA, In-vision app.
+<Image img={require("../static/img/portfolio/max-fashion.webp")} />
 
-   [Max Fashion Website](https://www.maxfashion.in/in/en/)
+Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS, Grunt JS, Google analytics, Google Tag Manager, Bitbucket, JIRA, In-vision app.
 
-  5. Shukran
+[Max Fashion Website](https://www.maxfashion.in/in/en/)
 
-    Shukran is a mobile app developed by Dubai's largest retail conglomerate, Landmark Group, to enhance customer experience and engagement. The web app provides users with a seamless shopping experience by allowing them to earn and redeem reward points across various Landmark Group brands, including Centrepoint, Home Centre, and Max Fashion. Shukran also offers personalized deals, exclusive discounts, and early access to sales, increasing customer loyalty and retention. The app features a user-friendly interface, easy payment options, and a comprehensive loyalty program that rewards users for their purchases and engagement. Shukran is available for download on both iOS and Android devices.
+5. Shukran
 
-    <Image  img={require('../static/img/portfolio/shukran.webp')} />
+   Shukran is a mobile app developed by Dubai's largest retail conglomerate, Landmark Group, to enhance customer experience and engagement. The web app provides users with a seamless shopping experience by allowing them to earn and redeem reward points across various Landmark Group brands, including Centrepoint, Home Centre, and Max Fashion. Shukran also offers personalized deals, exclusive discounts, and early access to sales, increasing customer loyalty and retention. The app features a user-friendly interface, easy payment options, and a comprehensive loyalty program that rewards users for their purchases and engagement. Shukran is available for download on both iOS and Android devices.
 
-    Tech stack - responsive websites, sketch, mac, SASS, BEM CSS, VueJS, Zeplin In-vision app.
+   <Image img={require("../static/img/portfolio/shukran.webp")} />
 
-    [Shukran website](https://www.shukran.com/ae/en/)
+   Tech stack - responsive websites, sketch, mac, SASS, BEM CSS, VueJS, Zeplin In-vision app.
+
+   [Shukran website](https://www.shukran.com/ae/en/)
 
 ### Fintech
 
-  6. Chrome river
+6. Chrome river
 
-    Chrome River is a cloud-based solution for expense and invoice management, targeted towards businesses and organizations of all sizes. The platform allows users to easily submit, track and approve expenses and invoices through a simple and user-friendly interface. The website is responsible for uploading expense receipts, viewing auto-uploaded receipts, approving expenses and much more by reducing administrative burden and improving accuracy. It is built on a modern technology stack, with support for RESTful APIs, webhooks and integrations with popular tools like Salesforce, Slack.
+   Chrome River is a cloud-based solution for expense and invoice management, targeted towards businesses and organizations of all sizes. The platform allows users to easily submit, track and approve expenses and invoices through a simple and user-friendly interface. The website is responsible for uploading expense receipts, viewing auto-uploaded receipts, approving expenses and much more by reducing administrative burden and improving accuracy. It is built on a modern technology stack, with support for RESTful APIs, webhooks and integrations with popular tools like Salesforce, Slack.
 
-    <Image  img={require('../static/img/portfolio/chrome-river.webp')} />
+   <Image img={require("../static/img/portfolio/chrome-river.webp")} />
 
-    Tech stack - Backbone JS, Marionette JS, Lodash, Underscore, Bootstrap JS, Scss, Invision, Sketch, Mac, Webstorm, Grunt JS
+   Tech stack - Backbone JS, Marionette JS, Lodash, Underscore, Bootstrap JS, Scss, Invision, Sketch, Mac, Webstorm, Grunt JS
 
-    [Chromeriver login](https://app.chromeriver.com/login)
+   [Chromeriver login](https://app.chromeriver.com/login)
 
-  7. Vista Real estate
+7. Vista Real estate
 
-    The web app is designed to connect real estate agents and buyers with financial assistance. It simplifies the process of finding a home loan by bringing together buyers, lenders, and agents in one platform. The app enables buyers to search for properties that meet their budget and loan requirements, while real estate agents can connect with potential buyers and lenders, and track loan progress. The platform offers tools to streamline loan applications and approvals, as well as personalized guidance from financial experts. Overall, the web app offers a convenient and efficient solution for both buyers and agents looking for financial assistance in the real estate industry.
+   The web app is designed to connect real estate agents and buyers with financial assistance. It simplifies the process of finding a home loan by bringing together buyers, lenders, and agents in one platform. The app enables buyers to search for properties that meet their budget and loan requirements, while real estate agents can connect with potential buyers and lenders, and track loan progress. The platform offers tools to streamline loan applications and approvals, as well as personalized guidance from financial experts. Overall, the web app offers a convenient and efficient solution for both buyers and agents looking for financial assistance in the real estate industry.
 
-    <Image  img={require('../static/img/portfolio/vesta.webp')} />
+   <Image img={require("../static/img/portfolio/vesta.webp")} />
 
-    Tech stack - AngularJS, Typescript, Bootstrap, SCSS
+   Tech stack - AngularJS, Typescript, Bootstrap, SCSS
 
 ### Marketing
-  
-  8. Cisco Webex Sales Pages
 
-    The Cisco Webex Sales Portal is a sophisticated and all-encompassing platform built to provide sales teams with comprehensive support for their Webex product and service sales efforts. The portal offers customers multiple options, including the ability to create free tier or trial accounts, as well as purchase premium plans directly from the website. Boasting a highly intuitive user interface and an array of powerful features, the Cisco Webex Sales Portal is a must-have resource for sales professionals seeking to accelerate growth and foster long-term customer relationships.
+8. Cisco Webex Sales Pages
 
-    <Image  img={require('../static/img/portfolio/cisco-webex.webp')} />
+   The Cisco Webex Sales Portal is a sophisticated and all-encompassing platform built to provide sales teams with comprehensive support for their Webex product and service sales efforts. The portal offers customers multiple options, including the ability to create free tier or trial accounts, as well as purchase premium plans directly from the website. Boasting a highly intuitive user interface and an array of powerful features, the Cisco Webex Sales Portal is a must-have resource for sales professionals seeking to accelerate growth and foster long-term customer relationships.
 
-    Tech stack - Java REST APIs, jQuery, Bootstrap, SCSS, jQuery components, JSP, etc. 
-  
-  [Cisco webex](https://www.webex.com/)
+   <Image img={require("../static/img/portfolio/cisco-webex.webp")} />
+
+   Tech stack - Java REST APIs, jQuery, Bootstrap, SCSS, jQuery components, JSP, etc.
+
+[Cisco webex](https://www.webex.com/)
 
 ### Education technology
 
-  9. Impartus Video Lectures
+9. Impartus Video Lectures
 
-    The web app is an online platform that enables students to access recorded lectures. The app provides a convenient way for students to catch up on missed lectures or review course material at their own pace. It features a user-friendly interface that allows students to search for specific lectures, view related materials, and take notes. Overall, the web app provides a valuable resource for students looking to enhance their learning experience and improve their academic performance.
+   The web app is an online platform that enables students to access recorded lectures. The app provides a convenient way for students to catch up on missed lectures or review course material at their own pace. It features a user-friendly interface that allows students to search for specific lectures, view related materials, and take notes. Overall, the web app provides a valuable resource for students looking to enhance their learning experience and improve their academic performance.
 
-    <Image  img={require('../static/img/portfolio/impartus.webp')} />
+   <Image img={require("../static/img/portfolio/impartus.webp")} />
 
-    Tech stack - AngularJS, NodeJS, Gulp JS, Bootstrap, SCSS
-
+   Tech stack - AngularJS, NodeJS, Gulp JS, Bootstrap, SCSS
 
 ### Personal
-  
-  10. Bookstoc - Unconventional books cataloging app
 
-  Bookstoc is a hobby project which I built to catalog my books collection and to track the books I share with my friends. I was the full stack developer on the doing development and marketing for the website. Built on ExtJS and PHP, it had ran its time. Currently the `Next JS` version of bookstoc is `WIP`.
+10. Bookstoc - Unconventional books cataloging app
 
-  <Image  img={require('../static/img/portfolio/bookstoc.webp')} />
+Bookstoc is a hobby project which I built to catalog my books collection and to track the books I share with my friends. I was the full stack developer on the doing development and marketing for the website. Built on ExtJS and PHP, it had ran its time. Currently the `Next JS` version of bookstoc is `WIP`.
 
-  Tech stack - ExtJS, Php, linux hosting
+{" "}
 
-  [bookstoc website WIP](https://bookstoc.com/)
-  
-  11. dhbalaji website 
+<Image img={require("../static/img/portfolio/bookstoc.webp")} />
 
-  The personal website of a dhbalaji, serves as a platform for showcasing his portfolio, sharing certification notes, and blogging about his experiences. The website also emphasizes the importance of personal branding and reaching a wider audience to share knowledge and ideas. Through his website, I try to promote my skills and expertise, while also sharing valuable insights and knowledge with others in the industry. Overall, the website serves as a valuable resource for individuals interested in frontend engineering, as well as those looking to build their personal brand and expand their reach in the industry. The website is few years old and had already evolved from `hexo JS` to `docusarus`.
+Tech stack - ExtJS, Php, linux hosting
 
-  <Image  img={require('../static/img/portfolio/dhbalaji-website.webp')} />
+[bookstoc website WIP](https://bookstoc.com/)
 
-  Tech stack - docusarus, vercel, css, nodeJS, google domains
+11. dhbalaji website
 
-  [dhbalaji.dev website](https://dhbalaji.dev)
+The personal website of a dhbalaji, serves as a platform for showcasing his portfolio, sharing certification notes, and blogging about his experiences. The website also emphasizes the importance of personal branding and reaching a wider audience to share knowledge and ideas. Through his website, I try to promote my skills and expertise, while also sharing valuable insights and knowledge with others in the industry. Overall, the website serves as a valuable resource for individuals interested in frontend engineering, as well as those looking to build their personal brand and expand their reach in the industry. The website is few years old and had already evolved from `hexo JS` to `docusarus`.
+
+{" "}
+
+<Image img={require("../static/img/portfolio/dhbalaji-website.webp")} />
+
+Tech stack - docusarus, vercel, css, nodeJS, google domains
+
+[dhbalaji.dev website](https://dhbalaji.dev)
 
 ### Not For Profits
-  
-  12. Satpraje 
-  
-  The not-for-profit organization is dedicated to improving the lives of children in the Karnataka area. The organization offers a range of services and programs designed to address the needs of children in the region, such as education, healthcare, and nutrition. It works closely with local communities and government agencies to provide support and resources to children and their families. 
 
-  <Image  img={require('../static/img/portfolio/satpraje.webp')} />
+12. Satpraje
 
-  Tech Stack: Wordpress
+The not-for-profit organization is dedicated to improving the lives of children in the Karnataka area. The organization offers a range of services and programs designed to address the needs of children in the region, such as education, healthcare, and nutrition. It works closely with local communities and government agencies to provide support and resources to children and their families.
 
-  [Satpraje Website](https://satpraje.org/)
+{" "}
 
-   13. Mann Cottage Industry Products Catalog
+<Image img={require("../static/img/portfolio/satpraje.webp")} />
 
-   The not-for-profit organization is dedicated to promoting handmade bedsheets and blankets from the Rajasthan area by providing them with online visibility. The organization works with local artisans to showcase their products on its website, which provides a platform for the artisans to reach a wider audience. By promoting handmade products, the organization is helping to support the local economy and preserve traditional crafts and techniques. The organization also aims to raise awareness about the cultural significance of these products and their importance in preserving the heritage of the region.
+Tech Stack: Wordpress
 
-  > Photo not available
+[Satpraje Website](https://satpraje.org/)
 
-  Tech Stack: Godaddy hosting, HTML, CSS
+13. Mann Cottage Industry Products Catalog
+
+The not-for-profit organization is dedicated to promoting handmade bedsheets and blankets from the Rajasthan area by providing them with online visibility. The organization works with local artisans to showcase their products on its website, which provides a platform for the artisans to reach a wider audience. By promoting handmade products, the organization is helping to support the local economy and preserve traditional crafts and techniques. The organization also aims to raise awareness about the cultural significance of these products and their importance in preserving the heritage of the region.
+
+> Photo not available
+
+Tech Stack: Godaddy hosting, HTML, CSS
 
 ## Non technical Skills
 
 ### Technical speaker
 
-  As a speaker with a technical background, I have experience presenting complex concepts to both technical and non-technical audiences in an engaging and understandable manner.
+As a speaker with a technical background, I have experience presenting complex concepts to both technical and non-technical audiences in an engaging and understandable manner.
 
 ### Public speaker
 
- I have honed my public speaking skills as a member of Toastmasters International, where I regularly deliver speeches on a variety of topics and receive feedback to improve my communication abilities.
+I have honed my public speaking skills as a member of Toastmasters International, where I regularly deliver speeches on a variety of topics and receive feedback to improve my communication abilities.
 
 ### Tech Blogger & Trainer
 
- As a tech blogger and an adept writer, I possess the skills to produce high-quality internal articles that can be leveraged by our team. In addition, I have conducted successful workshops on various technical topics to help team members develop their skills and knowledge.
+As a tech blogger and an adept writer, I possess the skills to produce high-quality internal articles that can be leveraged by our team. In addition, I have conducted successful workshops on various technical topics to help team members develop their skills and knowledge.
 
 ### Mentoring co-workers & presenting feedback
 
- As a mentor, I take pride in guiding and supporting my colleagues to enhance their skills and reach their potential. I offer constructive feedback to help them improve and achieve their goals. Additionally, I believe in creating a positive and encouraging environment to foster growth and development.
+As a mentor, I take pride in guiding and supporting my colleagues to enhance their skills and reach their potential. I offer constructive feedback to help them improve and achieve their goals. Additionally, I believe in creating a positive and encouraging environment to foster growth and development.
 
-### Interviewing frontend engineers 
+### Interviewing frontend engineers
 
- I have experience interviewing frontend engineers through telephonic screening, assessing their previous job roles, evaluating their coding proficiency, identifying their strengths, and determining their fit for our organization.
+I have experience interviewing frontend engineers through telephonic screening, assessing their previous job roles, evaluating their coding proficiency, identifying their strengths, and determining their fit for our organization.
 
-### Organize technical events 
+### Organize technical events
 
- I have experience organizing technical events, such as office hours, that benefit cross-functional teams and foster collaboration within an organization.
+I have experience organizing technical events, such as office hours, that benefit cross-functional teams and foster collaboration within an organization.
 
 > <ResumeDownloadLinks isInLine={false} />
