Removed unwanted categories

--- a/docs/experience/intro.mdx
+++ b/docs/experience/intro.mdx
@@ -4,14 +4,16 @@ title: Professional Experience
 slug: portfolio
 ---
 
-import ResumeDownloadLinks from "../src/components/common/DownloadLinks";
+import ResumeDownloadLinks from "../../src/components/common/DownloadLinks";
 import Image from "@theme/IdealImage";
 
 ## Technical Projects
 
 ### Revenue Optimizer
 
-Description: Currently under development, details remain confidential and are not publicly available, akin to the Sabre website.
+<Image img={require("../../static/img/2025/cro.png")} />
+
+Description: Currently under development, details remain confidential and are not fully [publicly available](https://www.sabre.com/products/sabremosaic/sabremosaic-offer-management/continuous-revenue-optimizer/), akin to the Sabre website.
 
 Role Overview:
 
@@ -37,7 +39,9 @@ Duration: April 2024 - Present
 
     By using Sabre Spark EDL, Sabre ensures a unified user experience across their products, enhancing user satisfaction and facilitating the adoption of new features and functionality. Spark EDL team consists of skilled designers and design technologists who specialize in developing vanilla JS components, React components, and design language CSS and themes. Their expertise and collaborative approach ensure that Sabre's products are designed with a consistent and intuitive user interface that meets the highest standards of accessibility, efficiency, and visual appeal.
 
-    <Image img={require("../static/img/portfolio/spark-edl-screenshot.webp")} />
+    <Image
+      img={require("../../static/img/portfolio/spark-edl-screenshot.webp")}
+    />
 
     Tech Stack - HTML, CSS, JS, Sass, ReactJS, Storybook, NPM, GCP, Teamcity CI, mac, linux VMs, NVM, NodeJS, Rollup JS, Husky, React Testing Library, Playwright, Bitbucket, JIRA
 
@@ -49,7 +53,7 @@ Duration: April 2024 - Present
 
    Sabre Sonic Inventory GUI is a graphical user interface & spring boot application that allows airlines to efficiently manage their flight schedules, seat inventory, and fare classes pricing. Sabre Sonic Inventory GUI also includes advanced features such as real-time inventory updates, dynamic pricing, and seat maps, which facilitate effective decision-making and improve customer satisfaction. The Sabre Sonic Inventory GUI team is composed of a diverse group of professionals, including business analysts, designers, full stack developers, architects, managers, directors, marketing specialists, and project managers.
 
-   <Image img={require("../static/img/portfolio/ssi-gui-inv.webp")} />
+   <Image img={require("../../static/img/portfolio/ssi-gui-inv.webp")} />
 
    Tech stack - React JS, Redux, Redux form, Redux Observable, React Router, Spring boot, Java, XML, IntelliJ Idea, Git, Bitbucket, JIRA, Spark EDL, NPM, Webpack, Level Access, Invision App.
 
@@ -59,7 +63,7 @@ Duration: April 2024 - Present
 
    To enhance the mobile ecommerce website conversions for Landmark Group brands, our frontend engineering team developed a standalone mdot web app using modern technologies such as ReactJS, PWA, and server-side rendering. The project was initiated from scratch, and the team faced various technical challenges to obtain approval from the directors and gain infrastructure assistance. While ensuring a great user experience and scaling the team, we met the project deadlines and successfully launched the app.
 
-   <Image img={require("../static/img/portfolio/mob-website.webp")} />
+   <Image img={require("../../static/img/portfolio/mob-website.webp")} />
 
    Tech stack - NodeJS, Express, ReactJS, Redux, React Router, Redux thunk, Algolia, REST Api, PWA, Service workers, Vue JS
 
@@ -69,7 +73,7 @@ Duration: April 2024 - Present
 
 {" "}
 
-<Image img={require("../static/img/portfolio/max-fashion.webp")} />
+<Image img={require("../../static/img/portfolio/max-fashion.webp")} />
 
 Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS, Grunt JS, Google analytics, Google Tag Manager, Bitbucket, JIRA, In-vision app.
 
@@ -79,7 +83,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
    Shukran is a mobile app developed by Dubai's largest retail conglomerate, Landmark Group, to enhance customer experience and engagement. The web app provides users with a seamless shopping experience by allowing them to earn and redeem reward points across various Landmark Group brands, including Centrepoint, Home Centre, and Max Fashion. Shukran also offers personalized deals, exclusive discounts, and early access to sales, increasing customer loyalty and retention. The app features a user-friendly interface, easy payment options, and a comprehensive loyalty program that rewards users for their purchases and engagement. Shukran is available for download on both iOS and Android devices.
 
-   <Image img={require("../static/img/portfolio/shukran.webp")} />
+   <Image img={require("../../static/img/portfolio/shukran.webp")} />
 
    Tech stack - responsive websites, sketch, mac, SASS, BEM CSS, VueJS, Zeplin In-vision app.
 
@@ -91,7 +95,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
    Chrome River is a cloud-based solution for expense and invoice management, targeted towards businesses and organizations of all sizes. The platform allows users to easily submit, track and approve expenses and invoices through a simple and user-friendly interface. The website is responsible for uploading expense receipts, viewing auto-uploaded receipts, approving expenses and much more by reducing administrative burden and improving accuracy. It is built on a modern technology stack, with support for RESTful APIs, webhooks and integrations with popular tools like Salesforce, Slack.
 
-   <Image img={require("../static/img/portfolio/chrome-river.webp")} />
+   <Image img={require("../../static/img/portfolio/chrome-river.webp")} />
 
    Tech stack - Backbone JS, Marionette JS, Lodash, Underscore, Bootstrap JS, Scss, Invision, Sketch, Mac, Webstorm, Grunt JS
 
@@ -101,7 +105,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
    The web app is designed to connect real estate agents and buyers with financial assistance. It simplifies the process of finding a home loan by bringing together buyers, lenders, and agents in one platform. The app enables buyers to search for properties that meet their budget and loan requirements, while real estate agents can connect with potential buyers and lenders, and track loan progress. The platform offers tools to streamline loan applications and approvals, as well as personalized guidance from financial experts. Overall, the web app offers a convenient and efficient solution for both buyers and agents looking for financial assistance in the real estate industry.
 
-   <Image img={require("../static/img/portfolio/vesta.webp")} />
+   <Image img={require("../../static/img/portfolio/vesta.webp")} />
 
    Tech stack - AngularJS, Typescript, Bootstrap, SCSS
 
@@ -111,7 +115,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
    The Cisco Webex Sales Portal is a sophisticated and all-encompassing platform built to provide sales teams with comprehensive support for their Webex product and service sales efforts. The portal offers customers multiple options, including the ability to create free tier or trial accounts, as well as purchase premium plans directly from the website. Boasting a highly intuitive user interface and an array of powerful features, the Cisco Webex Sales Portal is a must-have resource for sales professionals seeking to accelerate growth and foster long-term customer relationships.
 
-   <Image img={require("../static/img/portfolio/cisco-webex.webp")} />
+   <Image img={require("../../static/img/portfolio/cisco-webex.webp")} />
 
    Tech stack - Java REST APIs, jQuery, Bootstrap, SCSS, jQuery components, JSP, etc.
 
@@ -123,7 +127,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
    The web app is an online platform that enables students to access recorded lectures. The app provides a convenient way for students to catch up on missed lectures or review course material at their own pace. It features a user-friendly interface that allows students to search for specific lectures, view related materials, and take notes. Overall, the web app provides a valuable resource for students looking to enhance their learning experience and improve their academic performance.
 
-   <Image img={require("../static/img/portfolio/impartus.webp")} />
+   <Image img={require("../../static/img/portfolio/impartus.webp")} />
 
    Tech stack - AngularJS, NodeJS, Gulp JS, Bootstrap, SCSS
 
@@ -135,7 +139,7 @@ Bookstoc is a hobby project which I built to catalog my books collection and to 
 
 {" "}
 
-<Image img={require("../static/img/portfolio/bookstoc.webp")} />
+<Image img={require("../../static/img/portfolio/bookstoc.webp")} />
 
 Tech stack - ExtJS, Php, linux hosting
 
@@ -147,7 +151,7 @@ The personal website of a dhbalaji, serves as a platform for showcasing his port
 
 {" "}
 
-<Image img={require("../static/img/portfolio/dhbalaji-website.webp")} />
+<Image img={require("../../static/img/portfolio/dhbalaji-website.webp")} />
 
 Tech stack - docusarus, vercel, css, nodeJS, google domains
 
@@ -161,7 +165,7 @@ The not-for-profit organization is dedicated to improving the lives of children 
 
 {" "}
 
-<Image img={require("../static/img/portfolio/satpraje.webp")} />
+<Image img={require("../../static/img/portfolio/satpraje.webp")} />
 
 Tech Stack: Wordpress
 
