--- a/docs/experience/other.mdx
+++ b/docs/experience/other.mdx
@@ -36,6 +36,6 @@ The following is a selection of my personal technical projects, representing var
 
 I assist my father in selling some of his plastic parts on Amazon India. Through this experience, I have gained valuable business insights in cataloging inventory, managing sales on Amazon, overseeing ad campaigns, and handling GST accounts. This role has enhanced my understanding of e-commerce operations and digital marketing strategies, providing a practical complement to my technical skill set.
 
-- **Stage:** Live
+- **Stage:** [Live Store](https://www.amazon.in/Half-Inch-Plug-Collar-Dummy/dp/B0CZX2TLMX/ref=lp_27943762031_1_1?pf_rd_p=9e034799-55e2-4ab2-b0d0-eb42f95b2d05&pf_rd_r=SMNVS9VMPK50P0GDCA3S&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&th=1)
 - **Technologies:** Amazon Seller Portal, Photography, Accounts Management & Logistics
 - **Inception:** Q1 2024
